# virtune

src/: App.svelte
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  player.rs
src/lib/: Player.svelte
